added favourite section

--- a/favourite.html
+++ b/favourite.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/2ff4a5d1ea.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="favourite.css">
     <title>Favourite</title>
 </head>
 <body>
-    
+
+    <div class="header-section">
+        <div class="nav-bar">
+              <a href="" class="nav-link"> Your Favourites</a>
+              <a href="index.html" class="nav-link backToHome"> Go Back</a>
+        </div>
+     </div>
+
+     <div class="load-favourites">
+        <div id="fvt-super-hero">
+           <div class="fvt-hero-container">
+            <div class="fvt-hero-img">
+              <img src="" alt="">
+            </div>
+            <div class="fvt-hero-name">
+                <h3>Spider Man</h3>
+                <a href="" class="fvt-hero-details-btn">Show Details</a>
+                <button class="add-to-favourite"><i class="fa-solid fa-heart"></i></button>
+                <!-- <a href="" class="add-to-favourite"><i class="fa-solid fa-heart"></i></a> -->
+            </div>
+          </div> 
+        </div>
+
+
+
+
+    </div>
+    <script src="Assets/js/favourite.js"></script>
 </body>
 </html>
