Changes done in suggesting box and search box

--- a/favourite.html
+++ b/favourite.html
@@ -19,7 +19,7 @@
 
      <div class="load-favourites">
         <div id="fvt-super-hero">
-           <div class="fvt-hero-container">
+           <!-- <div class="fvt-hero-container">
             <div class="fvt-hero-img">
               <img src="" alt="">
             </div>
@@ -27,7 +27,7 @@
                 <h3>Spider Man</h3>
                 <a href="" class="fvt-hero-details-btn">Show Details</a>
                 <button class="add-to-favourite"><i class="fa-solid fa-heart"></i></button>
-                <!-- <a href="" class="add-to-favourite"><i class="fa-solid fa-heart"></i></a> -->
+                 <a href="" class="add-to-favourite"><i class="fa-solid fa-heart"></i></a> -->
             </div>
           </div> 
         </div>
